--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,22 +1,24 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
+﻿@model EmployeeManagement.ViewModels.HomeDetailsViewModel
+
+<html xmlns="http://www.w3Model.org/1999/xhtml">
 <head>
     <title></title>
 </head>
 <body>
     <div>
-        <h3>@ViewBag.PageTitle</h3>
+        <h3>@Model.PageTitle</h3>
 
        @* @{
             var employee = ViewData["Employee"] as EmployeeManagement.Models.Employee;
         }*@
         <div>
-            Name: @ViewBag.Employee.Name
+            Name: @Model.Employee.Name
         </div>
         <div>
-            Email: @ViewBag.Employee.Email
+            Email: @Model.Employee.Email
         </div>
         <div>
-            Department : @ViewBag.Employee.Department
+            Department : @Model.Employee.Department
         </div>
     </div>
 </body>
