--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,25 +1,18 @@
 ﻿@model EmployeeManagement.ViewModels.HomeDetailsViewModel
 
-<html xmlns="http://www.w3Model.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    <div>
-        <h3>@Model.PageTitle</h3>
+<div style="display:flex; justify-content:center; align-items:center; flex-direction:column; height:100vh; background:azure">
+    <h3>@Model.PageTitle</h3>
 
-       @* @{
+    @* @{
             var employee = ViewData["Employee"] as EmployeeManagement.Models.Employee;
         }*@
-        <div>
-            Name: @Model.Employee.Name
-        </div>
-        <div>
-            Email: @Model.Employee.Email
-        </div>
-        <div>
-            Department : @Model.Employee.Department
-        </div>
+    <div>
+        Name: @Model.Employee.Name
     </div>
-</body>
-</html>
+    <div>
+        Email: @Model.Employee.Email
+    </div>
+    <div>
+        Department : @Model.Employee.Department
+    </div>
+</divstyle="display:flex;>
