--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,16 +1,12 @@
-﻿@model EmployeeManagement.ViewModels.HomeDetailsViewModel
+﻿@model HomeDetailsViewModel
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Employee Details";
 }
 
 <div style="display:flex; justify-content:center; align-items:center; flex-direction:column; height:100vh; background:azure">
     <h3>@Model.PageTitle</h3>
-
-    @* @{
-            var employee = ViewData["Employee"] as EmployeeManagement.Models.Employee;
-        }*@
+   
     <div>
         Name: @Model.Employee.Name
     </div>
@@ -21,6 +17,6 @@
         Department : @Model.Employee.Department
     </div>
 </div>
-@section Scripts {
+@section Scripts{
     <script src="~/js/CustomScripts.js"></script>
 }
