--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@model IEnumerable<EmployeeManagement.Models.Employee>
+﻿@model IEnumerable<Employee>
 
 @{ 
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Employee List";
+   ViewBag.Title = "Employee List";
 }
 
 <div style="display:flex; justify-content:center; align-items:center; flex-direction:column; height:100vh; background:azure">
