--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Employee>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.Taghelpers
+
 
 @{ 
    ViewBag.Title = "Employee List";
@@ -13,7 +15,8 @@
             </div>
             <img class="card-img-top" src="~/images/eyes.jpg" />
             <div class="card-footer text-center">
-                <a href="#" class="btn btn-primary">View</a>
+                <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" 
+                            class="btn btn-primary">View</a>
                 <a href="#" class="btn btn-primary">Edit</a>
                 <a href="#" class="btn btn-danger">Delete</a>
             </div>
